# universal-agent-protocol

./: .benchmark_context.md  .eslintrc.cjs  .gitignore  .uap.json  AGENT.md  AGENTS.md  BENCHMARK.md  BENCHMARK_COMMITMENT.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_FINAL.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.opt  CLAUDE_COMPLIANCE_DEMONSTRATION.md  CODE_QUALITY_ANALYSIS.md  DASHBOARD_LIVE_DATA_REPORT.md  FINAL_SUMMARY.md  FINAL_SUMMARY_V0.10.0.md  FRESH_BENCHMARK_RESULTS.md  FULL_89_TEST_BENCHMARK_RESULTS.md  FULL_BENCHMARK_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MODEL_COMPARISON_BENCHMARK.md  NPM_PUBLISH_INSTRUCTIONS.md  PYTHON_SCRIPTS_PACKAGING.md  QWEN35_SETTINGS_UPDATE.md  README.md  REAL_BENCHMARK_RESULTS.md  RELEASE-7.0.0.md  STARTED.md  SYSTEM_VERIFICATION_COMPLETE.md  TBERNCH_SETUP.md  TOOL_CALLS_FIX_SUMMARY.md  UAP_100_COMPLIANCE_COMPLETE.md  UAP_ANALYSIS.md  UAP_COMPLETE_DOCUMENTATION.md  (+25 more)
.beads/: deletions.jsonl  issues.jsonl  issues.jsonl.bak
.claude/: commands.json  settings.json
.cursor/: hooks.json
.factory/: PROJECT.md  config.json  init.sh  services.yaml  settings.local.json
.forge/: forgecode.plugin.sh
.opencode/: config.json  opencode.json
.pipeline/: publish-to-npm.sh
.policy-tools/: 3a88b361-93d7-40f2-ac44-b7d8de6ff523_session_memory_write.py  43cd77fe-bd98-49a4-bac5-937798142a43_artifact_hygiene.py  (+6 more)
agents/: docker-compose.yml
tools/uap_harbor/: __init__.py  mcp_tools.py  pre_execution_hooks.py  pyproject.toml  supergenius_agent.py  uap_agent.py
(+745 files in other folders)
