[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uap-harbor"
version = "1.0.0"
description = "UAP SUPERGENIUS Agent for Harbor/Terminal-Bench"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["uap_harbor"]
package-dir = {"uap_harbor" = "."}
